<resources>
    <string name="app_name">NoteLite</string>
    <string name="add_note">Add Note</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="enter_note_date">Enter note date</string>
    <string name="enter_note_content">Enter note content</string>
    <string name="note_date">Note Date</string>
    <string name="note_content">Note Content</string>
    <string name="note_title">Note Title</string>
    <string name="next_question">Next Question</string>
    <string name="turing_machine_concepts_were_introduced_by">Turing Machine concepts were introduced by ?</string>
    <string name="a_chandler">a) Chandler</string>
    <string name="b_alan_turing">b) Alan Turing</string>
    <string name="c_dijkstra">c) Dijkstra</string>
    <string name="d_talha_khalid">d) Talha Khalid</string>
    <string name="which_python_library_is_used_for_speech_to_text_and_text_to_speech">Which Python library is used for speech-to-text and text-to-speech ?</string>
    <string name="a_opencv">a) opencv</string>
    <string name="b_tensorflow">b) tensorflow</string>
    <string name="pyttsx3">c) pyttsx3</string>
    <string name="d_all_of_the_above">d) All of the above</string>
    <string name="your_score">Your Score 😊</string>
    <string name="computer_science">Computer Sciences Based</string>
    <string name="videos_based">Videos Based</string>
    <string name="what_s_the_name_of_that_person">What\'s the name of that person ?</string>
    <string name="tobey_maguire">Tobey Maguire</string>
    <string name="tom_holland">Tom Holland</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="charles_oliveira">Charles Oliveira</string>
    <string name="connor">Connor</string>
    <string name="tony">Tony</string>
    <string name="alex_pereira">Alex Pereira</string>
    <string name="quizo">Quizo</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_id">Admin ID</string>
    <string name="security_key">Security Key</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="let_s_start_quizo">Let\'s Start Quizo</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="notelite">NoteLite</string>
    <string name="add_note_2">Add Note</string>
</resources>
